--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "@discordjs/opus": "^0.8.0",
-    "axios": "^1.2.1",
+    "@discordjs/voice": "^0.14.0",
+    "axios": "^1.2.2",
     "discord-player": "^5.3.2",
-    "discord.js": "^14.7.1"
+    "discord.js": "^14.7.1",
+    "libsodium-wrappers": "^0.7.10"
   },
   "main": "index.js"
 }
