--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
     "@discordjs/opus": "^0.8.0",
     "@discordjs/voice": "^0.14.0",
     "axios": "^1.2.2",
+    "discord-api-types": "^0.37.25",
     "discord-player": "^5.3.2",
     "discord.js": "^14.7.1",
-    "libsodium-wrappers": "^0.7.10"
+    "ffmpeg-static": "^5.1.0",
+    "opusscript": "^0.0.8",
+    "sodium": "^3.0.2"
   },
-  "main": "index.js"
+  "main": "index.ts"
 }
