--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "discord-api-types": "^0.37.25",
     "discord-player": "^5.3.2",
     "discord.js": "^14.7.1",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "ffmpeg-static": "^5.1.0",
+    "openai": "^3.2.1",
     "opusscript": "^0.0.8",
     "sodium": "^3.0.2"
   },
-  "main": "bot.ts"
+  "main": "index.js",
+  "type": "module",
+  "devDependencies": {
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
+  }
 }
