--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "scripts": {
+    "build": "esbuild bot.ts --bundle --platform=node --target=es2020 --outfile=dist/bot.js",
+    "dev": "ts-node-dev --respawn --transpile-only bot.ts",
+    "start": "node dist/bot.js"
+  },
   "dependencies": {
     "@discordjs/opus": "^0.8.0",
     "@discordjs/voice": "^0.14.0",
@@ -8,6 +13,7 @@
     "discord-player": "^5.3.2",
     "discord.js": "^14.7.1",
     "dotenv": "^16.3.1",
+    "esm": "^3.2.25",
     "ffmpeg-static": "^5.1.0",
     "openai": "^3.2.1",
     "opusscript": "^0.0.8",
@@ -16,7 +22,9 @@
   "main": "index.js",
   "type": "module",
   "devDependencies": {
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "esbuild": "^0.19.9",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
